fix page alignment

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,9 @@ body {
   background-color: #444;
   color: blanchedalmond;
   max-width: 900px;
-  margin: 40px auto auto auto;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 8px;
 }
 body a {
